# messagefacility

./: .gitignore  CMakeLists.txt  CMakePresets.json
Modules/: CMakeLists.txt
doc/: concepts.md
docs/: .special.rst  CMakeLists.txt  conf.py.in  depends.rst  index.rst  release-notes  releaseNotes.rst  series_temp.rst  suite_temp.rst  temp.rst
docs/_static/: hacks.css
docs/_templates/: layout.html
docs/series_notes/: .special.rst
docs/user_links/: Tutorial_MF_v12_Config.rst  build_and_start_mf.rst  log_messages.rst  logging_destinations.rst  usingMF.rst
messagefacility/: CMakeLists.txt
messagefacility/MessageLogger/: MFConfig.cc  MFConfig.h  MessageLogger.cc  MessageLogger.h
messagefacility/MessageService/: ELdestination.cc  ELdestination.h  ELostreamOutput.cc
messagefacility/Utilities/: CMakeLists.txt  ELextendedID.cc  ELextendedID.h  ELseverityLevel.cc  ELseverityLevel.h  ErrorObj.h  catch_main.cc  exception.cc  exception.h
messagefacility/plugins/: CMakeLists.txt  cerr_mfPlugin.cc  cerr_mfStatsPlugin.cc  cout_mfPlugin.cc  cout_mfStatsPlugin.cc  file_mfPlugin.cc  file_mfStatsPlugin.cc  mfPlugin.h  mfStatsPlugin.h  sqlite_mfPlugin.cc  stringstream.cc  stringstream.h  stringstream_mfPlugin.cc  syslog_mfPlugin.cc
messagefacility/plugins/private/: FileConfig.h  stringstream_streams.h
messagefacility/test/: CMakeLists.txt
messagefacility/test/Integration/: CMakeLists.txt  ELdestinationTester.cc  Issue17457TestDestination_mfPlugin.cc  WildcardDebug_t-ref.txt  WildcardDebug_t.cc  mfexample.cc
messagefacility/test/MessageService/: CMakeLists.txt
messagefacility/test/Utilities/: CMakeLists.txt  ExceptionDerived_t.cc  Exception_t.cc  Simple_t.cc
tools/migration/: CMakeLists.txt
ups/: product-config.cmake.in  product_deps  setup_for_development
